La til metode som sjekker at alle filene i statistikk-mappa er unike (ikke like som noen andre/kopier)

--- a/Webscraping attempts/Forsøk2.Rmd
+++ b/Webscraping attempts/Forsøk2.Rmd
@@ -218,6 +218,7 @@ for(i in 1:length(statistikk)){
 ```{r}
 # Sjekker antall statistikker som ble lastet ned
 length(list.files("./Data/statistikk"))
+length(unique(list.files("./Data/statistikk")))
 ```
 
 293 statistikker!
