--- a/Webscraping attempts/OmStatistikken.Rmd
+++ b/Webscraping attempts/OmStatistikken.Rmd
@@ -19,70 +19,104 @@ getwd() # sjekker path/working directory
 # Pathen til statistikkene er "./Data/statistikk
 
 filnavn <- list.files("./Data/statistikk") # lagre alle filnavnene i en str-liste
-
+filnavn
 ```
 
 Nå som vi har alle filnavnene i en liste kan vi iterere gjennom og lese:
+Lager en tabell for hver av om statistikkene med disse oversiktene (disse tabellene burde bli en tabell (+ eventuelt tabell i tabell, slik at det er lettere å lese))
 
+-def: definisjoner -- adm: adminisrbak: bakgrunn-
+
+Har fjernet str_remove_all, for lettere lesning (hvis feil kommenter tilbake)
+- Definisjoner
+- Administrative opplysninger
+- Bakgrunn
+- Produksjon
+- Nøyaktighet og pålitelighet
+- Relevant dokumentasjon
+Definisjoner" = def,
+           "Administrative opplysninger" = adm,
+           "Bakgrunn" = bak,
+           "Produksjon" = prod,
+           "Feilkilder" = feil,
+           "Relevant_dokumentasjon" = reldok
 ```{r}
+#Creating empty data frame to be able to join each new to this
+df <- data.frame("Statistikk"=character(),
+                 "Definisjoner"=character(), 
+                 "Administrative opplysninger"= character(), 
+                 "Bakgrunn"=character(),
+                 "Produksjon" = character(), 
+                 "Feilkilder" = character(), 
+                 "Relevant_dokumentasjon" = character()) 
+
+
 for(i in filnavn){
   url <- paste0("./Data/statistikk/", i)
 
   page <- read_html(x = url, encoding = "UTF-8")
   
   def <- page %>%
-  html_node('div[id="om-statistikken-definisjoner"]') %>%
-  html_text2() %>% 
-  # writeLines() %>%
-  str_remove_all(pattern = regex("\\n")) %>% 
-  str_remove_all(pattern = regex("\\r"))
+    html_node('div[id="om-statistikken-definisjoner"]') %>%
+    html_text2()# %>% 
+    # writeLines() %>%
+    #str_remove_all(pattern = regex("\\n")) %>% 
+    #str_remove_all(pattern = regex("\\r"))
 
-adm <- page %>%
-  html_node('div[id="om-statistikken-administrative_opplysninger"]') %>% #MERK! i motsetning til andre steder så skrives undertittelen "administrative opplysninger" med understrek i syntax, IKKE bindestrek! får feilmld om man bruker bindestrek her
-  html_text2() %>% 
-  # writeLines() %>%
-  str_remove_all(pattern = regex("\\n")) %>% 
-  str_remove_all(pattern = regex("\\r"))
+  adm <- page %>%
+    html_node('div[id="om-statistikken-administrative_opplysninger"]') %>% #MERK! i motsetning til andre steder så skrives undertittelen "administrative opplysninger" med understrek i syntax, IKKE bindestrek! får feilmld om man bruker bindestrek her
+    html_text2() #%>% 
+    # writeLines() %>%
+    #str_remove_all(pattern = regex("\\n")) %>% 
+    #str_remove_all(pattern = regex("\\r"))
 
-bak <- page %>%
-  html_node('div[id="om-statistikken-bakgrunn"]') %>%
-  html_text2() %>% 
-  # writeLines() %>%
-  str_remove_all(pattern = regex("\\n")) %>% 
-  str_remove_all(pattern = regex("\\r"))
+  bak <- page %>%
+    html_node('div[id="om-statistikken-bakgrunn"]') %>%
+    html_text2()# %>% 
+    # writeLines() %>%
+    #str_remove_all(pattern = regex("\\n")) %>% 
+    #str_remove_all(pattern = regex("\\r"))
 
-prod <- page %>%
-  html_node('div[id="om-statistikken-produksjon"]') %>%
-  html_text2() %>% 
-  # writeLines() %>%
-  str_remove_all(pattern = regex("\\n")) %>% 
-  str_remove_all(pattern = regex("\\r"))
+  prod <- page %>%
+    html_node('div[id="om-statistikken-produksjon"]') %>%
+    html_text2() #%>% 
+    # writeLines() %>%
+    #str_remove_all(pattern = regex("\\n")) %>% 
+    #str_remove_all(pattern = regex("\\r"))
 
-feil <- page %>%
-  html_node('div[id="om-statistikken-feilkilder"]') %>%
-  html_text2() %>% 
-  # writeLines() %>%
-  str_remove_all(pattern = regex("\\n")) %>% 
-  str_remove_all(pattern = regex("\\r"))
+  feil <- page %>%
+    html_node('div[id="om-statistikken-feilkilder"]') %>%
+    html_text2() #%>% 
+    # writeLines() %>%
+    #str_remove_all(pattern = regex("\\n")) %>% 
+    #str_remove_all(pattern = regex("\\r"))
 
-reldok <- page %>%
-  html_node('div[id="om-statistikken-relevant-dokumentasjon"]') %>%
-  html_text2() %>% 
-  # writeLines() %>%
-  str_remove_all(pattern = regex("\\n")) %>% 
-  str_remove_all(pattern = regex("\\r"))
+  reldok <- page %>%
+    html_node('div[id="om-statistikken-relevant-dokumentasjon"]') %>%
+    html_text2() #%>% 
+    # writeLines() %>%
+    #str_remove_all(pattern = regex("\\n")) %>% 
+    #str_remove_all(pattern = regex("\\r"))
+
+
+navn_statistikk <- paste0("df_omstat", i)
+ny_statistikk <- data.frame(navn_statistikk, def, adm, bak, prod, feil, reldok)
+#Using rbind() function to insert above observation in df
+df <- rbind(df, ny_statistikk)
 
 # Her må vi også få inn "Om sesongjustering" når det er fiksa
-  
-assign(paste0("df_omstat_", i), 
-       data.frame(
-         "Definisjoner" = def,
-         "Administrative opplysninger" = adm,
-         "Bakgrunn" = bak,
-         "Produksjon" = prod,
-         "Feilkilder" = feil,
-         "Relevant_dokumentasjon" = reldok
-       ))
+# Lagrer hver av statistikkene i egne tabeller med navn df_omstat_ + filnavn
+
+#assign(paste0("df_omstat_", i), 
+ #        data.frame(
+  #         "Definisjoner" = def,
+   #        "Administrative opplysninger" = adm,
+    #       "Bakgrunn" = bak,
+      #    "Produksjon" = prod,
+       #    "Feilkilder" = feil,
+        #   "Relevant_dokumentasjon" = reldok
+         #))
+
 }
 
 ```
@@ -99,3 +133,11 @@ Jeg ser at hvert objekt er  en chr-string [1:6] (evt. mindre ettersom de har fæ
 - Produksjon
 - Nøyaktighet og pålitelighet
 - Relevant dokumentasjon
+
+
+Sammenstiller tabellene fra om statistikkene med join
+
+```{r}
+
+```
+
