--- a/Webscraping attempts/OmStatistikken.Rmd
+++ b/Webscraping attempts/OmStatistikken.Rmd
@@ -19,7 +19,6 @@ getwd() # sjekker path/working directory
 # Pathen til statistikkene er "./Data/statistikk
 
 filnavn <- list.files("./Data/statistikk") # lagre alle filnavnene i en str-liste
-filnavn
 ```
 
 Nå som vi har alle filnavnene i en liste kan vi iterere gjennom disse, dele hver statistikk i seksjoner og lage datasett for hver statistikk.
@@ -62,7 +61,7 @@ for(i in filnavn){
   
   def <- page %>%
     html_node('div[id="om-statistikken-definisjoner"]') %>%
-    html_text2()# %>% 
+    html_text2() #%>% 
     # writeLines() %>%
     #str_remove_all(pattern = regex("\\n")) %>% 
     #str_remove_all(pattern = regex("\\r"))
@@ -70,45 +69,47 @@ for(i in filnavn){
   adm <- page %>%
     html_node('div[id="om-statistikken-administrative_opplysninger"]') %>%
     #MERK! i motsetning til andre steder så skrives undertittelen "administrative opplysninger" med understrek i syntax, IKKE bindestrek! får feilmld om man bruker bindestrek her
-    html_text2() %>% 
+    html_text2() #%>% 
     # writeLines() %>%
     # str_remove_all(pattern = regex("\\n")) %>% 
     # str_remove_all(pattern = regex("\\r"))
 
   bak <- page %>%
     html_node('div[id="om-statistikken-bakgrunn"]') %>%
-    html_text2() %>% 
+    html_text2() #%>% 
     # writeLines() %>%
     # str_remove_all(pattern = regex("\\n")) %>% 
     # str_remove_all(pattern = regex("\\r"))
 
   prod <- page %>%
     html_node('div[id="om-statistikken-produksjon"]') %>%
-    html_text2() %>% 
+    html_text2() #%>% 
     # writeLines() %>%
     # str_remove_all(pattern = regex("\\n")) %>% 
     # str_remove_all(pattern = regex("\\r"))
 
   feil <- page %>%
     html_node('div[id="om-statistikken-feilkilder"]') %>%
-    html_text2() %>% 
+    html_text2() #%>% 
     # writeLines() %>%
     # str_remove_all(pattern = regex("\\n")) %>% 
     # str_remove_all(pattern = regex("\\r"))
 
   reldok <- page %>%
     html_node('div[id="om-statistikken-relevant-dokumentasjon"]') %>%
-    html_text2() %>% 
+    html_text2() #%>% 
     # writeLines() %>%
     # str_remove_all(pattern = regex("\\n")) %>% 
     # str_remove_all(pattern = regex("\\r"))
+  
+  sesong <- page %>% 
+    html_node('div[id="om-sesongjustering"]') %>% 
+    html_text2()
 
-navn_statistikk <- paste0("df_omstat", i)
-ny_statistikk <- data.frame(navn_statistikk, def, adm, bak, prod, feil, reldok)
+navn_statistikk <- i
+ny_statistikk <- data.frame(navn_statistikk, def, adm, bak, prod, feil, reldok, sesong)
 #Using rbind() function to insert above observation in df
 df <- rbind(df, ny_statistikk)
-
-# Her må vi også få inn "Om sesongjustering" når det er fiksa
 
 # Lagrer hver av statistikkene i egne tabeller med navn df_omstat_ + filnavn
 
@@ -125,47 +126,18 @@ df <- rbind(df, ny_statistikk)
 
 ```
 
-# Ignorer inntil videre
 
-Først endre filnavn-stringen slik at filnavnene matcher de som ligger i R.
-
-```{r}
-leggtil <- "df_omstat_"
-filnavn <- paste0(leggtil, filnavn)
-```
-
-Iterere gjennom ...
-
-```{r}
-# Lager tom df
-big_data <- data.frame()
-
-# Lager dataframe med alle statistikkene's seksjoner i
-for(i in 1:length(filnavn)){
-  dat <- get(filnavn[i])
-  
-  hvilkenstatistikk <- filnavn[i] %>% 
-    str_replace("df_omstat_", "")
-  
-  dat$Statistikk <- hvilkenstatistikk
-  
-  big_data <- rbind(big_data, dat)
-}
-
-# Tester
-big_data$Statistikk[1]
-```
-
-Telle antall NA per seksjon
+## Telle antall NA per seksjon
 
 ```{r}
 # Antall statistikker per seksjon hvor hele seksjonen mangler
-sum(is.na(big_data$Definisjoner)) # 4
-sum(is.na(big_data$Administrative_opplysninger)) # 1
-sum(is.na(big_data$Bakgrunn)) # 0
-sum(is.na(big_data$Produksjon)) # 1
-sum(is.na(big_data$Feilkilder)) # 6
-sum(is.na(big_data$Relevant_dokumentasjon)) # 202
+sum(is.na(df$def)) # 4
+sum(is.na(df$adm)) # 1
+sum(is.na(df$bak)) # 0
+sum(is.na(df$prod)) # 1
+sum(is.na(df$feil)) # 6
+sum(is.na(df$reldok)) # 202
+sum(is.na(df$sesong))
 ```
 
 - Definisjoner
