--- a/Webscraping attempts/OmStatistikken.Rmd
+++ b/Webscraping attempts/OmStatistikken.Rmd
@@ -63,67 +63,28 @@ for(i in filnavn){
   page <- read_html(x = url, encoding = "UTF-8")
   
   def <- page %>%
-    html_node('div[id="om-statistikken-definisjoner"]') %>% 
-    # html_element('div[class="ssb-nested-accordion"]') %>% 
-    html_text2()
-    # try(html_elements('div[class="ssb-nested-accordion"]')) %>% 
-    # html_text2() # %>% 
-    # writeLines() %>%
-    #str_remove_all(pattern = regex("\\n")) %>% 
-    #str_remove_all(pattern = regex("\\r"))
-  
-  # funksjon <- function(def){
-  #   out <- tryCatch(
-  #     {
-  #       message("This is the try part")
-  #       
-  #       html_elements('div[class="ssb-nested-accordion"]') %>% 
-  #         html_text2()
-  #       },
-  #     error = function(e){
-  #       return(NA)
-  #     }
-  #   )
-  #   return(out)
-  # }
-  # 
-  # def <- funksjon(def)
+    html_node('div[id="om-statistikken-definisjoner"]')%>% html_text2()
 
   adm <- page %>%
     html_node('div[id="om-statistikken-administrative_opplysninger"]') %>%
-    #MERK! i motsetning til andre steder så skrives undertittelen "administrative opplysninger" med understrek i syntax, IKKE bindestrek! får feilmld om man bruker bindestRrek her
-    html_text2() #%>% 
-    # writeLines() %>%
-    # str_remove_all(pattern = regex("\\n")) %>% 
-    # str_remove_all(pattern = regex("\\r"))
+    #MERK! i motsetning til andre steder så skrives undertittelen "administrative opplysninger" med understrek i syntax, IKKE bindestrek! får feilmld om man bruker bindestrek her
+    html_text2()
 
   bak <- page %>%
     html_node('div[id="om-statistikken-bakgrunn"]') %>%
-    html_text2() #%>% 
-    # writeLines() %>%
-    # str_remove_all(pattern = regex("\\n")) %>% 
-    # str_remove_all(pattern = regex("\\r"))
-
+    html_text2() 
+  
   prod <- page %>%
     html_node('div[id="om-statistikken-produksjon"]') %>%
-    html_text2() #%>% 
-    # writeLines() %>%
-    # str_remove_all(pattern = regex("\\n")) %>% 
-    # str_remove_all(pattern = regex("\\r"))
+    html_text2() 
 
   feil <- page %>%
     html_node('div[id="om-statistikken-feilkilder"]') %>%
-    html_text2() #%>% 
-    # writeLines() %>%
-    # str_remove_all(pattern = regex("\\n")) %>% 
-    # str_remove_all(pattern = regex("\\r"))
+    html_text2() 
 
   reldok <- page %>%
     html_node('div[id="om-statistikken-relevant-dokumentasjon"]') %>%
-    html_text2() #%>% 
-    # writeLines() %>%
-    # str_remove_all(pattern = regex("\\n")) %>% 
-    # str_remove_all(pattern = regex("\\r"))
+    html_text2() 
   
   sesong <- page %>% 
     html_node('div[id="om-sesongjustering"]') %>% 
@@ -134,6 +95,8 @@ ny_statistikk <- data.frame(navn_statistikk, def, adm, bak, prod, feil, reldok, 
 #Using rbind() function to insert above observation in df
 df <- rbind(df, ny_statistikk)
 }
+#Lage id til statistikk_navn for lettere søking (navnene er kleine)
+df <- mutate(id=rownames(df), df)
 ```
 
 
@@ -284,19 +247,19 @@ produksjon <- df %>%
   separate(prod.datakilder,
            c("prod.datakilder",
              "prod.datainnsamling"),
-           sep = "Datakilder og utvalg") %>% 
+           sep = "Datainnsamling, editering og beregninger") %>% 
   separate(prod.datainnsamling,
            c("prod.datainnsamling",
              "prod.sesong"),
-           sep = "Datainnsamling, editering og beregninger") %>% 
+           sep = "Sesongjustering") %>% 
   separate(prod.sesong,
            c("prod.sesong",
              "prod.konf"),
-           sep = "Sesongjustering") %>% 
+           sep = "Konfidensialitet") %>% 
   separate(prod.konf,
            c("prod.konf",
              "prod.sammenligning"),
-           sep = "Konfidensialitet")
+           sep = "Sammenlignbarhet over tid og sted")
 ```
  Tabell med nøyaktighet of pålitelighet 
  kilde.usikkerhet: feilkilder og usikkerhet
@@ -315,5 +278,9 @@ feil <- df %>%
 #Relevant dokumentasjon
 reldok <- df %>% 
   select(navn_statistikk, reldok)
+```
+
+```{r}
+
 ```
 
